fixed some spacing issues

--- a/src/components/HeroPortion/HeroPortion.css
+++ b/src/components/HeroPortion/HeroPortion.css
@@ -118,17 +118,16 @@
         width: 80%;
         box-shadow: 1px 2px 5px grey;
         margin-top: 2.5rem;
+        padding: 20px;
+
     };
     .hero .left{
         width: 80%;
         margin: 0;
         padding: 2rem 0rem;
     }
-}
-
-@media (max-width:480px) {
-   .hero .right{
-    padding: 10px;
-   }
+    .hero .left .down .btns {
+        margin-bottom: 20px;
     
+    }
 }
